--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Type: Package
 Package: utVizSunburst
 Title: htmlwidgets package for creating sunburst plots of retentions and admissions data
-Version: 0.0.1
+Version: 0.0.2
 Authors@R:
     person("Jumping", "Rivers", , "info@jumpingrivers.com", role = c("aut", "cre"))
 Description: A package to create interactive visualizations of retentions and admissions data.
@@ -13,3 +13,4 @@ Imports:
     rlang
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.2.0
