--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,12 @@
 Type: Package
 Package: utVizSunburst
-Title: htmlwidgets package for creating sunburst plots of retentions and admissions data
+Title: htmlwidgets package for creating sunburst plots of retentions and
+    admissions data
 Version: 0.0.2
 Authors@R:
     person("Jumping", "Rivers", , "info@jumpingrivers.com", role = c("aut", "cre"))
-Description: A package to create interactive visualizations of retentions and admissions data.
+Description: A package to create interactive visualizations of retentions
+    and admissions data.
 License: file LICENSE
 Depends: 
     R (>= 4.1.0)
