--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,11 @@ Depends:
 Imports:
     magrittr,
     rlang
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: 
+    knitr
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.0
