--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,9 +15,11 @@ Imports:
     rlang
 Suggests: 
     knitr,
-    rmarkdown
+    rmarkdown,
+    testthat (>= 3.0.0)
 VignetteBuilder: 
     knitr
+Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.0
