--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,6 +24,7 @@ repos:
           .*\.Rds|
           .*\.Rproj|
           .*\.sh|
+          (.*/|)\.lintr|
           (.*/|)CODEOWNERS|
           (.*/|)\.gitignore|
           (.*/|)\.gitlab-ci\.yml|
