--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -44,6 +44,7 @@ repos:
           (.*/|)WORDLIST|
           \.github/workflows/.*|
           data/.*|
+          inst/htmlwidgets/.*\.yaml|
           )$
     -   id: lintr
     -   id: readme-rmd-rendered
