--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,8 @@ variables:
   ALLOWED_WARNINGS: 0
   ALLOWED_NOTES: 0
   NO_IMPORTS: 0
+  # Allow the use of MIT LICENSE.md, rather than JR proprietary license
+  VALIDATE_ALLOW_ERRORS: 1
   #disable_verify_r_package: "false"
   #DRAT_PUBLISH: "true"
 
