--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,7 @@ repos:
         args: [--style_pkg=styler, --style_fun=tidyverse_style, --scope=line_breaks]
     -   id: roxygenize
         additional_dependencies:
+          - gplots
           - htmlwidgets
     # codemeta must be above use-tidy-description when both are used
     # -   id: codemeta-description-updated
