--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Type: Package
 Package: utVizSunburst
 Title: htmlwidgets package for creating sunburst plots of retentions and
     admissions data
-Version: 0.1.2
+Version: 0.2.0
 Authors@R:
     person("Jumping", "Rivers", , "info@jumpingrivers.com", role = c("aut", "cre"))
 Description: A package to create interactive visualizations of retentions
@@ -11,6 +11,7 @@ License: MIT + file LICENSE
 Depends: 
     R (>= 4.1.0)
 Imports:
+    gplots,
     htmlwidgets,
     magrittr,
     rlang
