User-defined mouse-over, mouse-out and alt-click handlers in sunburst()

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,7 @@ repos:
         additional_dependencies:
           - gplots
           - htmlwidgets
+          - shiny
     # codemeta must be above use-tidy-description when both are used
     # -   id: codemeta-description-updated
     -   id: use-tidy-description
