--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,9 +15,11 @@ Imports:
     htmlwidgets,
     magrittr,
     rlang,
-    shiny
+    shiny,
+    stringr
 Suggests: 
     knitr,
+    patrick,
     purrr,
     rmarkdown,
     testthat (>= 3.0.0)
